mise en place du lien font awesome

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<!-- mise en place du meta pour la prise en charge responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Shoesplash</title>
+	<!-- mise en place des icones font awesome -->
+	<script src="https://kit.fontawesome.com/e7bc07dee6.js" crossorigin="anonymous"></script>
+	
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="style.css">
 </head>
