css image chaussure + texte par dessus ok

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	<!-- mise en place des icones font awesome -->
 	<script src="https://kit.fontawesome.com/e7bc07dee6.js" crossorigin="anonymous"></script>
 	
-	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="style.css">
+	<!-- Nous chargeons les feuilles de style via link -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
