--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<title>Shoesplash</title>
 	<!-- mise en place des icones font awesome -->
 	<script src="https://kit.fontawesome.com/e7bc07dee6.js" crossorigin="anonymous"></script>
-	
+
 	<!-- Nous chargeons les feuilles de style via link -->
+	<!-- le normalize.css permet de mettre à zéro le style du navigateur -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
